# dev-mentoring-cloud-project

./: .cz.yaml  .env_example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  devbox.json  get_changes_functions.sh  prepare-files.sh  pyproject.toml  taskfile.yml  terraform-plan.sh  terraform-workspaces.sh
.github/workflows/: deployment-infra.yaml
src/cloud-functions/: utils.py
src/cloud-functions/air_pollution/: main.py  requirements.txt
src/cloud-functions/air_pollution_topic/: main.py
src/cloud-functions/pub_sub_subcriber/: main.py
src/cloud-functions/pubsub_function_subscriber/: main.py
src/cloud-functions/weather/: main.py
src/cloud-functions/weather_topic/: main.py
src/terraform/: .terraform.lock.hcl  .tflint.hcl  backend.tf  functions.tf  provider.tf  pubsubs.tf  secret-managers.tf  services.tf  storages.tf  terraform-infra.tf  variables.tf
src/terraform/modules/functions/: main.tf  outputs.tf  variables.tf
src/terraform/modules/functions-normal/: main.tf  outputs.tf  variables.tf
src/terraform/modules/functions-pub-sub/: main.tf  variables.tf
src/terraform/modules/pubsub/: main.tf  outputs.tf  variables.tf
src/terraform/modules/pubsub/schemas/: air-polution-schema.json  weather-schema.json
src/terraform/modules/schedules/: main.tf  variables.tf
src/terraform/modules/secret-manager/: main.tf  variables.tf
src/terraform/modules/storage/: main.tf  outputs.tf  variables.tf
src/terraform/modules/workflows/: main.tf  variables.tf  workflow-example.yaml
